# CProJ

./: CMakeLists.txt  README.md
lib/: libjson-c.so.5.1.0
source/esp_main/: CMakeLists.txt
source/esp_main/src/: main.c  my.json
source/main/: CMakeLists.txt
source/main/src/: main.c
source/ngrok_main/: CMakeLists.txt
